--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ edition = "2018"
 name = "day01"
 path = "src/day01.rs"
 
+[[bin]]
+name = "day02"
+path = "src/day02.rs"
+
 [dependencies]
 anyhow = "1.0.34"
